# pftools3

./: .gitignore  CMakeLists.txt  ChangeLog  INSTALL  README  README.md  README.pftools.v2.3  README.pftools.v2.3.md
.github/workflows/: codeql-analysis.yml
Docker/: Dockerfile  README.docker  README.dockerhub
cmake/: CMakeTestIntel.c  FindPCRE.cmake  FindPCRE2.cmake  Linux-icc.cmake  Linux-ifort.cmake  PostInstall.cmake  build_internal_GD.cmake  build_internal_PLplot.cmake  build_internal_hpdf.cmake  build_internal_pcre.cmake  gcc.cmake  summary.cmake
cmake/tests/: TestSuite_pfsearchV3.cmake  cmp_pfsearchX.cmake  macros.cmake  run_PF_revForward.cmake  run_pfsearch_test.cmake
data/: CMakeLists.txt
data/FamilyProfile/: DoubleProfile.prf  sequence.seq
data/Matrices/: blosum100.cmp  blosum30.cmp  blosum45.cmp  blosum50.cmp  blosum62.cmp  blosum65.cmp  blosum80.cmp  dna_50_40.cmp  gonnet.cmp  iupac_50_40.cmp  pam120.cmp  pam160.cmp  pam200.cmp  pam220.cmp  pam250.cmp  pam30.cmp  pam40.cmp  pam400.cmp  pam80.cmp
data/reverse/: forward.msa  forward.prf  forward.seq  forward_dna.seq  forward_dna.seq_0.dat.orig  forward_dna_shift5.seq  reverse.msa  reverse.prf  reverse.seq
doc/: CMakeLists.txt  algorithm2e.sty  draft2.eps  profile.tex  profile.txt  small_logo_sib.eps
doc/Article/: pfsearch3_v0.8.odt
doc/poster/: beamerthemeSIB.sty  postertemplate.aux  postertemplate.nav  postertemplate.snm  postertemplate.tex  prf_syntax.xar  profile_syntax.tex  profile_syntax.vrb  unnamed1.xar
docker/: Dockerfile
man/: 2ft.1  6ft.1  CMakeLists.txt  gtop.1  htop.1  pfmake.1  pfscale.1  pfscan.1  pfsearch.1  pfsearchV2.1  pfw.1  psa.5  psa2msa.1  ptof.1  ptoh.1  xpsa.5
src/: CMakeLists.txt
src/C/: CMakeLists.txt  config.h.cmake
src/C/include/: histogram.h  pfConfig.h.cmake  pfHeuristicInline.h  pfProfile.h  pfProfileInline.h  pfRegexp.h  pfSequence.h  pfSequenceInline.h  pfexport.h  random.h  system.h
src/C/prg/: pfcalibrate.c  pfindex.c  pfscan.c  pfsearch.c  split.c  testHeuristicMatchDeletion.c  threads.h  threads_array.h
src/C/sse2/: CMakeLists.txt  heuristic_sse2.c  sse2_inline_fcts.backup  sse2_inline_fcts.h  xali1_sse2.c  xalip_sse2.c  xalit_sse2.c
src/C/sse41/: CMakeLists.txt  heuristic_sse41.c  sse41_inline_fcts.h  xali1_print_sse41.c  xali1_sse41.c  xalip_sse41.c  xalit_sse41.c
src/C/utils/: CMakeLists.txt  Normalization.c  ReadSequence.c  floatprint.c  generatesequences.c  histogram.c  integersubs.c  io.c  output.c  pam.c  pfregexp.c  profile.c  quantileregression.c  random.c  sigfpe.c  sort.c  system.c
src/Fortran/: 2ft.f  6ft.f  CFAve.f  CMakeLists.txt  CPAve.f  NtoR.f  RtoN.f  Xblnk.f  abini.f  ardim.f  avdat.f  codat.f  cvini.f  dfdat.f  dfnul.f  djdat.f  gsdat.f  gtop.f  hmdat.f  htop.f  io.c  jprsm.f  lblnk.f  nodat.f  pfdat.f  pfind.f  pfmake.f  pfscale.f  pfscan.f  pfsearch.f  pfsearch.f.v2.3.5d  pfsearchV2.f  pfw.f  pmali.f  prali.f  prsp.f  prxp.f  psa2msa.f  psdat.f  ptof.f  (+22 more)
src/Perl/: CMakeLists.txt  README-ps_scan  compare_2_profiles.pl  fasta_to_fastq.pl  make_iupac_cmp.pl  ps_scan.pl  scramble_fasta.pl  sort_fasta.pl  split_profile_file.pl
tests/: CMakeLists.txt
tests/cmake/SH2/: double_sequence_dna.seq  sequence.fq  sequence_dna.seq  sequence_dna_reverse.seq  sequence_dna_reverse_complement.seq  sequence_reverse.seq  sh2.dna.sequence  sh2.prf  sh2.sequence  test
tests/cmake/SH3/: pfam_sh3.prf  sh3.fq  sh3.prf
tests/cmake/Truth/SH2/: output_format0.test  output_format1.test  output_format2.test  output_format3.test  output_format4.test  output_format5.test  output_format6.test  output_format_rev.test
tests/examples/: 16S.prf  CMakeLists.txt  CVPBR322.embl  MYSA_HUMAN  R76849.seq  RF00177.msa  SRR9619541.sample.fastq  Toolbox.pm  VAV_HUMAN.seq  VAV_RAT.seq  all.prf  all.seq  coils.prf  ecp.prf  hiv.fastq  hiv.prf  htop_issue.hmm  pfam_sh3.hmm  prosite13.prf  rand_dna.prf  rand_dna.seq  sample.fastq  score.lis  sh2.prf  sh3.gpr  sh3.msf  sh3.prf  sh3.seq  standard.random  test_V2.sh.cmake  test_V3.out  test_V3.sh.cmake  test_V3_output.sh.cmake  test_V3b.sh.cmake  test_pfsearchV3_iupac.pl.cmake  test_pfsearchV3_pattern-regexp.sh.cmake  test_scan_search.pl.cmake
tests/examples/patterns/: ambiguities.hit  ambiguities_excluded.hit  anchorC.hit  anchorN.hit  fully_defined.hit  multiple_matches.hit  repetition.hit  repetition_range.hit  undefined.hit
