################################### NEW PFSEARCH ####################################
ADD_SUBDIRECTORY(C)

################################### OLD PFSEARCH ####################################
ADD_SUBDIRECTORY(Fortran)

################################### PS_SCAN #########################################
ADD_SUBDIRECTORY(Perl)

