ADD_DEFINITIONS("-I ${PFTOOLS_SOURCE_DIR}/src/C/include/")

SET (SSE2_SOURCES 
     heuristic_sse2.c
     xali1_sse2.c
     xalip_sse2.c
     xalit_sse2.c
)

FOREACH(file IN LISTS SSE2_SOURCES)
	SET_SOURCE_FILES_PROPERTIES( ${file} PROPERTIES COMPILE_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_SSE2_FLAGS}")
ENDFOREACH(file) 

ADD_LIBRARY( SSE2 OBJECT ${SSE2_SOURCES})

SET (LIBRARY_SSE2_SOURCES "${SSE2_SOURCES}" PARENT_SCOPE)