ADD_DEFINITIONS("-I ${PFTOOLS_SOURCE_DIR}/src/C/include/")

SET(SSE41_SOURCES
    heuristic_sse41.c
    xali1_sse41.c
    xalip_sse41.c
    xalit_sse41.c
)

SET(SSE41_PFPLOT_SOURCES
    xali1_print_sse41.c
)

FOREACH(file IN LISTS SSE41_SOURCES)
	SET_SOURCE_FILES_PROPERTIES( ${file} PROPERTIES COMPILE_FLAGS "${CMAKE_C_FLAGS} ${CMAKE_C_SSE41_FLAGS}")
ENDFOREACH(file) 

ADD_LIBRARY(SSE41 OBJECT ${SSE41_SOURCES})

SET(LIBRARY_SSE41_SOURCES "${SSE41_SOURCES}" PARENT_SCOPE)
